kubernetes/apps/webdev/games-manager/backend/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: games-manager-backend
    app.kubernetes.io/instance: games-manager-backend
    app.kubernetes.io/name: games-manager-backend
  name: games-manager-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: games-manager-backend
  template:
    metadata:
      labels:
        app: games-manager-backend
        app.kubernetes.io/name: games-manager-backend
    spec:
      containers:
      - image: directus/directus:11.10.2
        name: games-manager-backend
