kubernetes/apps/webdev/games-manager/backend/app/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: games-manager-backend
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gamesdb.f9.casa`)
      kind: Rule
      services:
        - name: games-manager-backend
          port: 8055
      middlewares:
        - name: default-headers
          namespace: traefik
